# zephyr

./: west.yml
cmake/: gcc-m-cpu.cmake  gcc-m-fpu.cmake
cmake/modules/: FindZephyr-sdk.cmake
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.ameba  adc_ameba.c
drivers/audio/: CMakeLists.txt  Kconfig  Kconfig.ameba_dmic  Kconfig.amebapro2_dmic  dmic_ameba.c  dmic_amebapro2.c
drivers/can/: CMakeLists.txt  Kconfig  Kconfig.ameba  can_ameba_a2c.c
drivers/clock_control/: CMakeLists.txt  Kconfig  clock_control_ameba.c
drivers/counter/: CMakeLists.txt  Kconfig  counter_ameba_tmr.c
drivers/crypto/: CMakeLists.txt  Kconfig  Kconfig.ameba  crypto_ameba.c
drivers/disk/: CMakeLists.txt  Kconfig  Kconfig.sdmmc_amebapro2  sdmmc_amebapro2.c
drivers/display/: CMakeLists.txt  Kconfig  Kconfig.ameba_lcdc  Kconfig.ili9xxx  display_ameba_lcdc.c  display_ili9806.c  display_ili9806.h  display_ili9xxx.c  display_ili9xxx.h
drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.ameba  dma_ameba_gdma.c  dma_ameba_gdma.h
drivers/entropy/: CMakeLists.txt  Kconfig  Kconfig.ameba  Kconfig.amebapro2  entropy_ameba.c  entropy_amebapro2.c
drivers/ethernet/: CMakeLists.txt  Kconfig  Kconfig.ameba  eth_ameba.c
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.ameba  Kconfig.amebapro2  flash_ameba.c  flash_amebapro2.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.ameba  Kconfig.amebapro2  gpio_ameba.c  gpio_amebapro2.c
drivers/hwinfo/: CMakeLists.txt  Kconfig  hwinfo_ameba.c
drivers/i2c/: Kconfig  (+5 more)
samples/hello_world.hifi4/: CMakeLists.txt
samples/hello_world.hifi4/src/: main.c
(+454 files in other folders)
